# qbhle

./: MANIFEST.in  pyproject.toml  qbhle-more.blnk  readme.md  requirements.txt  setup.py
doc/: development.md
qbhle/: qb.py  qb_1_1.py  qbfunction.py  qblexer.py  qbparser.py  qbprocess.py  qbstatic.py  qbsub.py
tests/qbhle/: test_order_of_operation.py
tests/qbhle/data/: ERDEV.BAS  ORDER_OF_OPERATION.BAS  PRINT.BAS  math.bas  math.txt
